<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joeltcollins.unicornpi.ItemTwoFragment">

    <RelativeLayout
        android:id="@+id/system_progressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:visibility="gone">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/system_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/frag_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/global_settings"
                android:textSize="12sp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/card_system_brightness"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_below="@id/frag_title"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                card_view:cardCornerRadius="@dimen/card_corner_radius">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="12dp">

                    <TextView
                        android:id="@+id/brightness_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="12dp"
                        android:textSize="@dimen/text_card_title"
                        android:text="@string/brightness_title" />

                    <TextView
                        android:id="@+id/brightness_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/brightness_title"
                        android:layout_alignParentRight="true"
                        android:text="0" />

                    <SeekBar
                        android:id="@+id/brightness_seekbar"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="32dp"
                        android:layout_below="@id/brightness_title"
                        android:layout_alignParentLeft="true"
                        android:max="100"
                        android:progress="0"/>


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_system_fade"
                android:layout_below="@id/card_system_brightness"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                card_view:cardCornerRadius="@dimen/card_corner_radius">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="12dp"
                    android:focusable="true" android:focusableInTouchMode="true">

                    <TextView
                        android:id="@+id/fade_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textSize="@dimen/text_card_title"
                        android:text="@string/fade_title"  />

                    <TextView
                        android:id="@+id/fade_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/fade_title"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/label_inactive"
                        android:text="@string/fade_status_inactive" />

                    <TextView android:id="@+id/fade_time_label"
                        android:layout_below="@id/fade_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/time_mins" />

                    <EditText android:id="@+id/fade_time"
                        android:layout_below="@id/fade_time_label"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="0"
                        android:inputType="number"/>

                    <TextView android:id="@+id/fade_target_label"
                        android:layout_below="@id/fade_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/target_brightness" />

                    <SeekBar
                        android:id="@+id/fade_target_seekbar"
                        android:layout_below="@id/fade_target_label"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="32dp"
                        android:layout_alignParentLeft="true"
                        android:max="100"
                        android:progress="0"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true">

                        <Button
                            android:id="@+id/fade_stop_button"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/stop" />
                        <Button
                            android:id="@+id/fade_start_button"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"

                            android:layout_height="wrap_content"
                            android:text="@string/start" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_below="@id/card_system_fade"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                card_view:cardCornerRadius="@dimen/card_corner_radius">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="12dp"
                    android:clipToPadding="false"
                    android:focusable="true" android:focusableInTouchMode="true">

                    <TextView
                        android:id="@+id/alarm_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textSize="@dimen/text_card_title"
                        android:text="@string/alarm_title"  />

                    <TextView
                        android:id="@+id/alarm_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/alarm_title"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/label_inactive"
                        android:text="@string/alarm_status_inactive" />

                    <TextView
                        android:id="@+id/alarm_time_text"
                        android:layout_below="@id/alarm_title"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="28dp"
                        android:layout_alignParentLeft="true"
                        android:textSize="36dp"
                        android:text="00:00"/>

                    <Button
                        android:id="@+id/alarm_time_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_set"
                        android:layout_alignBottom="@+id/alarm_time_text"
                        android:layout_toRightOf="@+id/alarm_time_text"
                        android:layout_alignParentRight="true" />

                    <TextView android:id="@+id/alarm_lead_label"
                        android:layout_below="@id/alarm_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/time_lead" />

                    <EditText android:id="@+id/alarm_lead"
                        android:layout_below="@id/alarm_lead_label"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="0"
                        android:inputType="number"/>

                    <TextView android:id="@+id/alarm_tail_label"
                        android:layout_below="@id/alarm_lead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/time_tail" />

                    <EditText
                        android:id="@+id/alarm_tail"
                        android:layout_below="@id/alarm_tail_label"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="0"
                        android:inputType="number"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true">

                        <Button
                            android:id="@+id/alarm_stop_button"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/stop" />
                        <Button
                            android:id="@+id/alarm_start_button"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"

                            android:layout_height="wrap_content"
                            android:text="@string/start" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>