<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joeltcollins.unicornpi.ItemThreeFragment">

    <RelativeLayout
        android:id="@+id/anim_progressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:visibility="gone">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/anim_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clipToPadding="false">

            <android.support.v7.widget.CardView
                android:id="@+id/card_anim_rainbow"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                card_view:cardCornerRadius="@dimen/card_corner_radius">>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="12dp"
                    android:focusable="true" android:focusableInTouchMode="true">

                    <TextView
                        android:id="@+id/rainbow_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textSize="@dimen/text_card_title"
                        android:text="@string/rainbow_title"  />

                    <TextView android:id="@+id/rainbow_theme_label"
                        android:layout_below="@id/rainbow_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/theme_label" />

                    <Spinner
                        android:id="@+id/rainbow_theme_spinner"
                        android:layout_below="@+id/rainbow_theme_label"
                        android:layout_width="220dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="12dp"
                        android:spinnerMode="dropdown"
                        android:entries="@array/rainbow_themes"
                        android:prompt="@string/theme_prompt"/>

                    <TextView android:id="@+id/rainbow_speed_label"
                        android:layout_below="@id/rainbow_theme_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/rainbow_speed" />

                    <SeekBar
                        android:id="@+id/rainbow_speed_seekbar"
                        android:layout_below="@id/rainbow_speed_label"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="32dp"
                        android:layout_alignParentLeft="true"
                        android:max="50"
                        android:progress="0"/>


                    <Button
                        android:id="@+id/rainbow_start_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_height="wrap_content"
                        android:text="@string/start" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_anim_alsa"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_below="@id/card_anim_rainbow"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                card_view:cardCornerRadius="@dimen/card_corner_radius">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="420dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="12dp"
                    android:focusable="true" android:focusableInTouchMode="true">

                    <TextView
                        android:id="@+id/alsa_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:textSize="@dimen/text_card_title"
                        android:text="@string/alsa_title"  />

                    <TextView android:id="@+id/alsa_theme_label"
                        android:layout_below="@id/alsa_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/theme_label" />

                    <Spinner
                        android:id="@+id/alsa_theme_spinner"
                        android:layout_below="@id/alsa_theme_label"
                        android:layout_width="220dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="12dp"
                        android:spinnerMode="dropdown"
                        android:entries="@array/alsa_themes"
                        android:prompt="@string/theme_prompt"/>

                    <TextView android:id="@+id/alsa_sensitivity_label"
                        android:layout_below="@id/alsa_theme_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/alsa_sensitivity" />

                    <SeekBar
                        android:id="@+id/alsa_sensitivity_seekbar"
                        android:layout_below="@id/alsa_sensitivity_label"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="30dp"
                        android:layout_alignParentLeft="true"
                        android:max="100"
                        android:progress="0"/>

                    <TextView android:id="@+id/alsa_mic_label"
                        android:layout_below="@id/alsa_sensitivity_seekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/alsa_mic" />

                    <SeekBar
                        android:id="@+id/alsa_mic_seekbar"
                        android:layout_below="@id/alsa_mic_label"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="30dp"
                        android:layout_alignParentLeft="true"
                        android:max="100"
                        android:progress="0"/>

                    <TextView android:id="@+id/alsa_vol_label"
                        android:layout_below="@id/alsa_mic_seekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/alsa_vol" />

                    <SeekBar
                        android:id="@+id/alsa_vol_seekbar"
                        android:layout_below="@id/alsa_vol_label"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="30dp"
                        android:layout_alignParentLeft="true"
                        android:max="100"
                        android:progress="0"/>


                    <Button
                        android:id="@+id/alsa_start_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_height="wrap_content"
                        android:text="@string/start" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

